update on jellyfin funtionality added active user tiles, fix system info added css

--- a/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
+++ b/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
@@ -406,8 +406,17 @@
     -fx-background-color: derive(-terminal-blue, 40%);
     -fx-text-fill: #1a1b26;
 }
+.control-button{
+}
+.dark-theme .stop-button{
+}
+.light-theme .stop-button{
+}
 
-
+.dark-theme .info-button{
+}
+.light-theme .info-button{
+}
 .execute-button {
     -fx-font-size: 13px;
 }
