change on prefwidth of view box

--- a/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
@@ -168,7 +168,7 @@
         </left>
 
         <center>
-            <StackPane fx:id="mainStackPane" styleClass="view-box" prefHeight="800">
+            <StackPane fx:id="mainStackPane" styleClass="view-box" prefHeight="800" prefWidth="1300">
                 <!-- inject Views-->
             </StackPane>
         </center>
